--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   "author": "Ranik",
   "license": "ISC",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
-    "mongoose": "^8.1.0"
+    "express-session": "^1.18.0",
+    "mongoose": "^8.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
