--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ranik",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
