--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A web application for students placements and interviews.",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ranik",
@@ -18,5 +19,8 @@
     "mongoose": "^8.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
